--- a/src/Chimp.Tests/Chimp.Tests.csproj
+++ b/src/Chimp.Tests/Chimp.Tests.csproj
@@ -64,7 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CoreTests.cs" />
     <Compile Include="DebuggerShim.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CallMonkeyTalkAgent.feature.cs">
