--- a/src/Chimp.WebAPI/Chimp.WebAPI.csproj
+++ b/src/Chimp.WebAPI/Chimp.WebAPI.csproj
@@ -237,6 +237,12 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Chimp.Core\Chimp.Core.csproj">
+      <Project>{5F4FF5DE-FA7A-494E-921D-DA2A8E2218BD}</Project>
+      <Name>Chimp.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
